refactor(booking-service): organize request/response DTOs